--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,8 @@ a {
     text-decoration: none;
 }
 
-.heading {
+.heading,
+.title {
     color: #0d1111;
     font-weight: 700;
 }
@@ -172,7 +173,7 @@ a {
     box-shadow: 0px 10px 80px 0px rgba(0, 0, 0, 0.05);
 }
 
-.hero .courses-icon {
+.hero .hero-courses-icon {
     position: relative;
     width: 36px;
     height: 40px;
@@ -180,7 +181,7 @@ a {
     border-radius: 3px;
 }
 
-.hero .courses-icon::after {
+.hero .hero-courses-icon::after {
     position: absolute;
     bottom: 8px;
     left: 4px;
@@ -192,7 +193,7 @@ a {
     background: #fff;
 }
 
-.hero .hero-courses .courses-text {
+.hero .hero-courses .hero-courses-text {
     color: #0d1111;
     font-size: 1rem;
     font-weight: 500;
@@ -298,7 +299,8 @@ a {
     max-width: 51%;
 }
 
-.features .features-info .text {
+.features .features-info .text,
+.courses .courses-info .text {
     color: #767e7e;
     font-size: 1.2rem;
     font-weight: 700;
@@ -368,4 +370,127 @@ a {
     color: #9da6a5;
     font-size: 1.6rem;
     line-height: 1.6875; /* 168.75% */
+}
+
+/* COURSES */
+
+.courses {
+    padding: 30px 0;
+    margin-top: 70px;
+}
+
+.courses-info .heading {
+    margin-top: 18px;
+    font-size: 4.2rem;
+}
+
+.courses .row {
+    margin-top: 19px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.courses .row .desc {
+    max-width: 525px;
+    color: #767e7e;
+    font-size: 1.8rem;
+    line-height: 1.77778; /* 177.778% */
+}
+
+.courses .row .btn-course {
+    color: #1ebfc1;
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-decoration-line: underline;
+}
+
+.courses .list-courses {
+    margin-top: 79px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 47px;
+}
+
+.courses .list-courses .item-courses {
+    position: relative;
+    width: calc(33.33% - 31.5px);
+}
+
+.courses .img-course-thumb {
+    width: 100%;
+    height: 393px;
+    object-fit: cover;
+    border-radius: 8px;
+    opacity: 0.35;
+    background: #d0efed;
+}
+
+.list-courses .item-course-body {
+    position: absolute;
+    bottom: -124px;
+    right: 17px;
+    left: 17px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 18px 25px 29px;
+    width: 325px;
+    height: 195px;
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 16px 90px 0px;
+}
+
+.list-courses .item-course-body .title {
+    font-size: 2.2rem;
+}
+
+.item-course-body .price {
+    margin-top: 16px;
+    color: #767e7e;
+    font-size: 1.6rem;
+}
+
+.item-course-body .price strong {
+    color: #0d1111;
+    font-size: 2.2rem;
+    font-weight: 700;
+}
+
+.item-course-body .desc {
+    margin-top: 6px;
+}
+
+.item-course-body .desc,
+.item-course-body .info {
+    color: #9da6a5;
+    font-size: 1.4rem;
+}
+
+.item-course-body .item-info {
+    margin-top: 18px;
+}
+
+.item-course-body .info {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+}
+
+.item-course-body .info:first-child {
+    margin-left: 16px;
+    margin-right: 26px;
+}
+
+.item-course-body .info::before {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    left: -10px;
+    line-height: 6px;
+    border-radius: 50%;
+    background: var(--color-primary);
 }
